--- a/public/package.json
+++ b/public/package.json
@@ -20,16 +20,16 @@
   "author": "Dave O",
   "license": "ISC",
   "dependencies": {
-    "@angular/animations": "^7.0.4",
-    "@angular/common": "^7.0.4",
-    "@angular/compiler": "^7.0.4",
-    "@angular/core": "^7.0.4",
-    "@angular/forms": "^7.0.4",
-    "@angular/http": "^7.0.4",
-    "@angular/platform-browser": "^7.0.4",
-    "@angular/platform-browser-dynamic": "^7.0.4",
-    "@angular/router": "^7.0.4",
-    "@types/node": "^10.12.9",
+    "@angular/animations": "^7.1.0",
+    "@angular/common": "^7.1.0",
+    "@angular/compiler": "^7.1.0",
+    "@angular/core": "^7.1.0",
+    "@angular/forms": "^7.1.0",
+    "@angular/http": "^7.1.0",
+    "@angular/platform-browser": "^7.1.0",
+    "@angular/platform-browser-dynamic": "^7.1.0",
+    "@angular/router": "^7.1.0",
+    "@types/node": "^10.12.10",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.7",
@@ -41,8 +41,9 @@
     "marked": "^0.5.2",
     "moment": "^2.22.1",
     "pager": "^0.1.3",
+    "parcel": "^1.10.3",
     "pdfjs-dist": "^2.0.489",
-    "popper.js": "^1.14.4",
+    "popper.js": "^1.14.5",
     "redux": "^4.0.1",
     "rxjs": "^6.2.0",
     "rxjs-compat": "^6.3.3",
@@ -50,7 +51,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^7.0.4",
+    "@angular/compiler-cli": "^7.1.0",
     "@ngtools/webpack": "^7.0.6",
     "@types/core-js": "^2.5.0",
     "@types/jasmine": "^3.3.0",
@@ -129,7 +130,7 @@
     "karma-typescript-angular2-transform": "^1.0.2",
     "karma-typescript-preprocessor": "^0.4.0",
     "loose-envify": "^1.4.0",
-    "mini-css-extract-plugin": "^0.4.4",
+    "mini-css-extract-plugin": "^0.4.5",
     "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "parcel-bundler": "^1.10.3",
@@ -137,6 +138,9 @@
     "postcss-url": "^8.0.0",
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "^3.0.0",
+    "rollup-plugin-buble": "^0.19.4",
+    "rollup-plugin-postcss": "^1.6.3",
+    "rollup-plugin-replace": "^2.1.0",
     "sass-loader": "^7.1.0",
     "ts-node": "^7.0.1",
     "tsify": "^4.0.0",
