--- a/public/package.json
+++ b/public/package.json
@@ -20,16 +20,16 @@
   "author": "Dave O",
   "license": "ISC",
   "dependencies": {
-    "@angular/animations": "^7.1.0",
-    "@angular/common": "^7.1.0",
-    "@angular/compiler": "^7.1.0",
-    "@angular/core": "^7.1.0",
-    "@angular/forms": "^7.1.0",
-    "@angular/http": "^7.1.0",
-    "@angular/platform-browser": "^7.1.0",
-    "@angular/platform-browser-dynamic": "^7.1.0",
-    "@angular/router": "^7.1.0",
-    "@types/node": "^10.12.10",
+    "@angular/animations": "^7.1.1",
+    "@angular/common": "^7.1.1",
+    "@angular/compiler": "^7.1.1",
+    "@angular/core": "^7.1.1",
+    "@angular/forms": "^7.1.1",
+    "@angular/http": "^7.1.1",
+    "@angular/platform-browser": "^7.1.1",
+    "@angular/platform-browser-dynamic": "^7.1.1",
+    "@angular/router": "^7.1.1",
+    "@types/node": "^10.12.12",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.7",
@@ -43,7 +43,7 @@
     "pager": "^0.1.3",
     "parcel": "^1.10.3",
     "pdfjs-dist": "^2.0.489",
-    "popper.js": "^1.14.5",
+    "popper.js": "^1.14.6",
     "redux": "^4.0.1",
     "rxjs": "^6.2.0",
     "rxjs-compat": "^6.3.3",
@@ -51,12 +51,12 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^7.1.0",
-    "@ngtools/webpack": "^7.0.6",
+    "@angular/compiler-cli": "^7.1.1",
+    "@ngtools/webpack": "^7.1.1",
     "@types/core-js": "^2.5.0",
-    "@types/jasmine": "^3.3.0",
-    "@types/lodash": "^4.14.117",
-    "@types/webpack": "^4.4.19",
+    "@types/jasmine": "^3.3.1",
+    "@types/lodash": "^4.14.119",
+    "@types/webpack": "^4.4.20",
     "auto-reload-brunch": "^2.7.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -87,7 +87,7 @@
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
-    "fancy-log": "^1.3.2",
+    "fancy-log": "^1.3.3",
     "file-loader": "^2.0.0",
     "fs": "0.0.1-security",
     "fuse-box": "^3.6.0",
@@ -108,14 +108,14 @@
     "gulp-run-command": "0.0.9",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-strip-code": "^0.1.4",
-    "gulp-typescript": "^5.0.0-alpha.3",
+    "gulp-typescript": "^5.0.0",
     "gulp-uglify": "^3.0.1",
     "gulp-uglify-es": "^1.0.4",
     "html-webpack-plugin": "^3.2.0",
     "jasmine-core": "^3.3.0",
     "jasmine-jquery": "^2.1.1",
     "jasmine-promise-wrapper": "0.0.3",
-    "karma": "^3.1.1",
+    "karma": "^3.1.3",
     "karma-browserify": "^5.3.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
@@ -143,7 +143,7 @@
     "rollup-plugin-replace": "^2.1.0",
     "sass-loader": "^7.1.0",
     "ts-node": "^7.0.1",
-    "tsify": "^4.0.0",
+    "tsify": "^4.0.1",
     "typescript": "^3.1.6",
     "uglify-es": "^3.3.9",
     "uglify-js": "^3.4.9",
@@ -151,10 +151,10 @@
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.0",
-    "webpack": "^4.26.0",
+    "webpack": "^4.27.0",
     "webpack-dev-server": "^3.1.10",
     "webpack-merge": "^4.1.4",
-    "webpack-stream": "^5.1.1",
+    "webpack-stream": "^5.2.1",
     "webpack-strip-block": "^0.2.0"
   },
   "browser": {
