--- a/public/package.json
+++ b/public/package.json
@@ -20,29 +20,29 @@
   "author": "Dave O",
   "license": "ISC",
   "dependencies": {
-    "@angular/animations": "^7.1.1",
-    "@angular/common": "^7.1.1",
-    "@angular/compiler": "^7.1.1",
-    "@angular/core": "^7.1.1",
-    "@angular/forms": "^7.1.1",
-    "@angular/http": "^7.1.1",
-    "@angular/platform-browser": "^7.1.1",
-    "@angular/platform-browser-dynamic": "^7.1.1",
-    "@angular/router": "^7.1.1",
-    "@types/node": "^10.12.14",
+    "@angular/animations": "^7.2.0",
+    "@angular/common": "^7.2.0",
+    "@angular/compiler": "^7.2.0",
+    "@angular/core": "^7.2.0",
+    "@angular/forms": "^7.2.0",
+    "@angular/http": "^7.2.0",
+    "@angular/platform-browser": "^7.2.0",
+    "@angular/platform-browser-dynamic": "^7.2.0",
+    "@angular/router": "^7.2.0",
+    "@types/node": "^10.12.18",
     "babel-polyfill": "^6.26.0",
-    "bootstrap": "^4.1.3",
-    "core-js": "^2.5.7",
+    "bootstrap": "^4.2.1",
+    "core-js": "^2.6.1",
     "font-awesome": "^4.7.0",
     "handlebars": "^4.0.12",
     "helpers": "0.0.6",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "lodash-es": "^4.17.11",
-    "marked": "^0.5.2",
+    "marked": "^0.6.0",
     "moment": "^2.23.0",
     "pager": "^0.1.3",
-    "parcel": "^1.10.3",
+    "parcel": "^1.11.0",
     "pdfjs-dist": "^2.0.489",
     "popper.js": "^1.14.6",
     "redux": "^4.0.1",
@@ -52,17 +52,17 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^7.1.1",
-    "@ngtools/webpack": "^7.1.3",
+    "@angular/compiler-cli": "^7.2.0",
+    "@ngtools/webpack": "^7.2.0",
     "@types/core-js": "^2.5.0",
-    "@types/jasmine": "^3.3.1",
+    "@types/jasmine": "^3.3.5",
     "@types/lodash": "^4.14.119",
-    "@types/webpack": "^4.4.20",
+    "@types/webpack": "^4.4.22",
     "auto-reload-brunch": "^2.7.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.0.5",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-angular2": "0.0.2",
     "babel-preset-env": "^1.7.0",
@@ -75,28 +75,28 @@
     "clean-webpack-plugin": "^1.0.0",
     "copy": "^0.3.1",
     "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^1.0.1",
+    "css-loader": "^2.1.0",
     "cssify": "^1.0.3",
     "csslint": "^1.0.5",
     "de-indent": "^1.0.2",
     "del": "^3.0.0",
     "envify": "^4.1.0",
-    "eslint-config-standard": "^11.0.0",
+    "eslint-config-standard": "^12.0.0",
     "eslint-loader": "^2.1.1",
-    "eslint-plugin-html": "^4.0.6",
+    "eslint-plugin-html": "^5.0.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-standard": "^3.1.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "events": "^1.1.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "fancy-log": "^1.3.3",
-    "file-loader": "^2.0.0",
+    "file-loader": "^3.0.1",
     "fs": "0.0.1-security",
     "fuse-box": "^3.6.0",
     "gulp-babel": "^7.0.1",
     "gulp-better-rollup": "^3.4.0",
-    "gulp-bootlint": "^0.10.1",
+    "gulp-bootlint": "^0.10.2",
     "gulp-copy": "^1.1.0",
     "gulp-csslint": "^1.0.1",
     "gulp-env": "^0.4.0",
@@ -118,7 +118,7 @@
     "jasmine-core": "^3.3.0",
     "jasmine-jquery": "^2.1.1",
     "jasmine-promise-wrapper": "0.0.3",
-    "karma": "^3.1.3",
+    "karma": "^3.1.4",
     "karma-browserify": "^6.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-commonjs": "^1.0.0",
@@ -133,33 +133,33 @@
     "karma-typescript-angular2-transform": "^1.0.2",
     "karma-typescript-preprocessor": "^0.4.0",
     "loose-envify": "^1.4.0",
-    "mini-css-extract-plugin": "^0.4.5",
+    "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "parcel-bundler": "^1.10.3",
+    "parcel-bundler": "^1.11.0",
     "postcss-import": "^12.0.1",
     "postcss-url": "^8.0.0",
-    "raw-loader": "^0.5.1",
+    "raw-loader": "^1.0.0",
     "resolve-url-loader": "^3.0.0",
     "rollup-plugin-buble": "^0.19.4",
     "rollup-plugin-postcss": "^1.6.3",
     "rollup-plugin-replace": "^2.1.0",
     "sass-loader": "^7.1.0",
-    "steal": "^2.1.11",
+    "steal": "^2.1.13",
     "steal-css": "^1.3.2",
     "steal-tools": "^2.0.11",
     "steal-typescript": "^0.5.0",
     "tsify": "^4.0.1",
-    "typescript": "3.1.6",
+    "typescript": "^3.2.2",
     "uglify-es": "^3.3.9",
     "uglify-js": "^3.4.9",
     "url-loader": "^1.1.2",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.0",
-    "webpack": "^4.27.0",
-    "webpack-dev-server": "^3.1.10",
-    "webpack-merge": "^4.1.4",
+    "webpack": "^4.28.1",
+    "webpack-dev-server": "^3.1.14",
+    "webpack-merge": "^4.2.1",
     "webpack-stream": "^5.2.1",
     "webpack-strip-block": "^0.2.0"
   },
@@ -204,22 +204,15 @@
   "steal": {
     "npmAlgorithm": "flat",
     "ext": {
-      "css": "steal-css",
-      "ts": "steal-typescript",
-      "js": "steal"
+      "css": "steal-css"
     },
     "cssOptions": {
       "timeout": "15"
     },
     "plugins": [
-      "steal-css",
-      "steal-typescript"
+      "steal-css"
     ],
     "meta": {
-      "typescript": {
-        "format": "global",
-        "exports": "ts"
-      },
       "popper.js": {
         "format": "global",
         "exports": "Popper"
