--- a/public/package.json
+++ b/public/package.json
@@ -4,7 +4,8 @@
   "description": "Karma Jasmine Browserify, Fusebox, Webpack, Parcel, Angular Testing",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "node ../appExpress.js"
   },
   "keywords": [
     "karma",
@@ -20,16 +21,16 @@
   "author": "Dave O",
   "license": "ISC",
   "dependencies": {
-    "@angular/animations": "^7.2.5",
-    "@angular/common": "^7.2.5",
-    "@angular/compiler": "^7.2.5",
-    "@angular/core": "^7.2.5",
-    "@angular/forms": "^7.2.5",
-    "@angular/http": "^7.2.5",
-    "@angular/platform-browser": "^7.2.5",
-    "@angular/platform-browser-dynamic": "^7.2.5",
-    "@angular/router": "^7.2.5",
-    "@types/node": "^10.12.26",
+    "@angular/animations": "^7.2.8",
+    "@angular/common": "^7.2.8",
+    "@angular/compiler": "^7.2.8",
+    "@angular/core": "^7.2.8",
+    "@angular/forms": "^7.2.8",
+    "@angular/http": "^7.2.8",
+    "@angular/platform-browser": "^7.2.8",
+    "@angular/platform-browser-dynamic": "^7.2.8",
+    "@angular/router": "^7.2.8",
+    "@types/node": "^10.12.30",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
@@ -39,10 +40,10 @@
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "lodash-es": "^4.17.11",
-    "marked": "^0.6.0",
+    "marked": "^0.6.1",
     "moment": "^2.24.0",
     "pager": "^0.1.3",
-    "parcel": "^1.11.0",
+    "parcel": "^1.12.0",
     "pdfjs-dist": "^2.0.489",
     "popper.js": "^1.14.7",
     "redux": "^4.0.1",
@@ -52,12 +53,12 @@
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^7.2.5",
-    "@ngtools/webpack": "^7.3.1",
+    "@angular/compiler-cli": "^7.2.8",
+    "@ngtools/webpack": "^7.3.5",
     "@types/core-js": "^2.5.0",
     "@types/jasmine": "^3.3.9",
-    "@types/lodash": "^4.14.121",
-    "@types/webpack": "^4.4.24",
+    "@types/lodash": "^4.14.122",
+    "@types/webpack": "^4.4.25",
     "auto-reload-brunch": "^2.7.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -75,7 +76,7 @@
     "clean-webpack-plugin": "^1.0.1",
     "copy": "^0.3.1",
     "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^2.1.0",
+    "css-loader": "^2.1.1",
     "cssify": "^1.0.3",
     "csslint": "^1.0.5",
     "de-indent": "^1.0.2",
@@ -94,6 +95,7 @@
     "file-loader": "^3.0.1",
     "fs": "0.0.1-security",
     "fuse-box": "^3.7.1",
+    "gulp": "^4.0.0",
     "gulp-babel": "^7.0.1",
     "gulp-better-rollup": "^3.4.0",
     "gulp-bootlint": "^0.10.2",
@@ -109,16 +111,16 @@
     "gulp-remove-code": "^3.0.4",
     "gulp-rename": "^1.4.0",
     "gulp-run-command": "0.0.9",
-    "gulp-sourcemaps": "^2.6.4",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-strip-code": "^0.1.4",
     "gulp-typescript": "^5.0.0",
-    "gulp-uglify": "^3.0.1",
+    "gulp-uglify": "^3.0.2",
     "gulp-uglify-es": "^1.0.4",
     "html-webpack-plugin": "^3.2.0",
     "jasmine-core": "^3.3.0",
     "jasmine-jquery": "^2.1.1",
     "jasmine-promise-wrapper": "0.0.3",
-    "karma": "^4.0.0",
+    "karma": "^4.0.1",
     "karma-browserify": "^6.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-commonjs": "^1.0.0",
@@ -136,7 +138,7 @@
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "parcel-bundler": "^1.11.0",
+    "parcel-bundler": "^1.12.0",
     "postcss-import": "^12.0.1",
     "postcss-url": "^8.0.0",
     "raw-loader": "^1.0.0",
@@ -145,9 +147,9 @@
     "rollup-plugin-postcss": "^1.6.3",
     "rollup-plugin-replace": "^2.1.0",
     "sass-loader": "^7.1.0",
-    "steal": "^2.1.14",
+    "steal": "2.1.14",
     "steal-css": "^1.3.2",
-    "steal-tools": "^2.0.11",
+    "steal-tools": "2.0.11",
     "steal-typescript": "^0.5.0",
     "tsify": "^4.0.1",
     "typescript": "^3.2.4",
@@ -156,9 +158,9 @@
     "url-loader": "^1.1.2",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
-    "watchify": "^3.11.0",
-    "webpack": "^4.29.4",
-    "webpack-dev-server": "^3.1.14",
+    "watchify": "^3.11.1",
+    "webpack": "^4.29.6",
+    "webpack-dev-server": "^3.2.1",
     "webpack-merge": "^4.2.1",
     "webpack-stream": "^5.2.1",
     "webpack-strip-block": "^0.2.0"
