Added Brunch bundler

--- a/public/package.json
+++ b/public/package.json
@@ -5,7 +5,14 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "node ../appExpress.js"
+    "server": "node ../appExpress.js",
+    "lint": "eslint --ext .js --ignore-pattern marked.js --ignore-pattern webcomponents-hi-sd-ce.js webpack/appl webpack/tests",
+    "build": "node webpack/build/build.js",
+    "bpc": "rm -rf dist/brunch",
+    "btc": "rm -rf dist_test/brunch",
+    "bt": "npm run btc && brunch b --env test",
+    "bp": "export LOGGY_STACKS=1; npm run bpc && brunch build --production",
+    "bw": "npm run btc && brunch watch --server"
   },
   "keywords": [
     "karma",
@@ -43,7 +50,6 @@
     "marked": "^0.6.1",
     "moment": "^2.24.0",
     "pager": "^0.1.3",
-    "parcel": "^1.12.0",
     "pdfjs-dist": "^2.0.489",
     "popper.js": "^1.14.7",
     "redux": "^4.0.1",
@@ -60,6 +66,7 @@
     "@types/lodash": "^4.14.122",
     "@types/webpack": "^4.4.25",
     "auto-reload-brunch": "^2.7.1",
+    "babel-brunch": "^7.0.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
@@ -73,15 +80,18 @@
     "browserify-css": "^0.14.0",
     "browserify-shim": "^3.8.14",
     "buffer": "^5.2.1",
+    "clean-css-brunch": "^2.10.0",
     "clean-webpack-plugin": "^1.0.1",
     "copy": "^0.3.1",
     "copy-webpack-plugin": "^4.6.0",
+    "copycat-brunch": "^1.1.1",
     "css-loader": "^2.1.1",
     "cssify": "^1.0.3",
     "csslint": "^1.0.5",
     "de-indent": "^1.0.2",
     "del": "^3.0.0",
     "envify": "^4.1.0",
+    "eslint-brunch": "^3.12.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-html": "^5.0.3",
@@ -122,6 +132,7 @@
     "jasmine-promise-wrapper": "0.0.3",
     "karma": "^4.0.1",
     "karma-browserify": "^6.0.0",
+    "karma-brunch": "^1.0.6",
     "karma-chrome-launcher": "^2.2.0",
     "karma-commonjs": "^1.0.0",
     "karma-firefox-launcher": "^1.1.0",
@@ -138,6 +149,7 @@
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "parcel": "^1.12.0",
     "parcel-bundler": "^1.12.0",
     "postcss-import": "^12.0.1",
     "postcss-url": "^8.0.0",
@@ -151,8 +163,10 @@
     "steal-css": "^1.3.2",
     "steal-tools": "2.0.11",
     "steal-typescript": "^0.5.0",
+    "terser-brunch": "^3.0.0",
     "tsify": "^4.0.1",
     "typescript": "^3.2.4",
+    "typescript-brunch": "^2.3.0",
     "uglify-es": "^3.3.9",
     "uglify-js": "^3.4.9",
     "url-loader": "^1.1.2",
