--- a/public/package.json
+++ b/public/package.json
@@ -28,21 +28,21 @@
   "author": "Dave O",
   "license": "ISC",
   "dependencies": {
-    "@angular/animations": "^7.2.8",
-    "@angular/common": "^7.2.8",
-    "@angular/compiler": "^7.2.8",
-    "@angular/core": "^7.2.8",
-    "@angular/forms": "^7.2.8",
-    "@angular/http": "^7.2.8",
-    "@angular/platform-browser": "^7.2.8",
-    "@angular/platform-browser-dynamic": "^7.2.8",
-    "@angular/router": "^7.2.8",
-    "@types/node": "^10.12.30",
+    "@angular/animations": "^7.2.9",
+    "@angular/common": "^7.2.9",
+    "@angular/compiler": "^7.2.9",
+    "@angular/core": "^7.2.9",
+    "@angular/forms": "^7.2.9",
+    "@angular/http": "^7.2.9",
+    "@angular/platform-browser": "^7.2.9",
+    "@angular/platform-browser-dynamic": "^7.2.9",
+    "@angular/router": "^7.2.9",
+    "@types/node": "^10.14.1",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
     "font-awesome": "^4.7.0",
-    "handlebars": "^4.1.0",
+    "handlebars": "^4.1.1",
     "helpers": "0.0.6",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
@@ -59,12 +59,12 @@
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^7.2.8",
-    "@ngtools/webpack": "^7.3.5",
+    "@angular/compiler-cli": "^7.2.9",
+    "@ngtools/webpack": "^7.3.6",
     "@types/core-js": "^2.5.0",
-    "@types/jasmine": "^3.3.9",
-    "@types/lodash": "^4.14.122",
-    "@types/webpack": "^4.4.25",
+    "@types/jasmine": "^3.3.11",
+    "@types/lodash": "^4.14.123",
+    "@types/webpack": "^4.4.26",
     "auto-reload-brunch": "^2.7.1",
     "babel-brunch": "^7.0.0",
     "babel-cli": "^6.26.0",
@@ -105,6 +105,7 @@
     "file-loader": "^3.0.1",
     "fs": "0.0.1-security",
     "fuse-box": "^3.7.1",
+    "google-closure-compiler": "^20190301.0.0",
     "gulp": "^4.0.0",
     "gulp-babel": "^7.0.1",
     "gulp-better-rollup": "^3.4.0",
@@ -123,7 +124,7 @@
     "gulp-run-command": "0.0.9",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-strip-code": "^0.1.4",
-    "gulp-typescript": "^5.0.0",
+    "gulp-typescript": "^5.0.1",
     "gulp-uglify": "^3.0.2",
     "gulp-uglify-es": "^1.0.4",
     "html-webpack-plugin": "^3.2.0",
@@ -149,15 +150,30 @@
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "parcel": "^1.12.0",
-    "parcel-bundler": "^1.12.0",
+    "parcel": "^1.12.2",
+    "parcel-bundler": "^1.12.2",
     "postcss-import": "^12.0.1",
     "postcss-url": "^8.0.0",
     "raw-loader": "^1.0.0",
     "resolve-url-loader": "^3.0.1",
-    "rollup-plugin-buble": "^0.19.4",
+    "rollup": "^1.6.0",
+    "rollup-plugin-alias": "^1.5.1",
+    "rollup-plugin-angular": "^0.5.3",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-buble": "^0.19.6",
+    "rollup-plugin-commonjs": "^9.2.1",
+    "rollup-plugin-gulp": "^1.0.0",
+    "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-resolve": "^4.0.1",
     "rollup-plugin-postcss": "^1.6.3",
-    "rollup-plugin-replace": "^2.1.0",
+    "rollup-plugin-progress": "^1.1.1",
+    "rollup-plugin-replace": "^2.1.1",
+    "rollup-plugin-serve": "^1.0.1",
+    "rollup-plugin-typescript": "^1.0.0",
+    "rollup-plugin-typescript2": "^0.20.1",
+    "rollup-plugin-uglify": "^6.0.2",
+    "rollup-stream": "^1.24.1",
     "sass-loader": "^7.1.0",
     "steal": "2.1.14",
     "steal-css": "^1.3.2",
@@ -165,10 +181,10 @@
     "steal-typescript": "^0.5.0",
     "terser-brunch": "^3.0.0",
     "tsify": "^4.0.1",
-    "typescript": "^3.2.4",
+    "typescript": "3.2.4",
     "typescript-brunch": "^2.3.0",
     "uglify-es": "^3.3.9",
-    "uglify-js": "^3.4.9",
+    "uglify-js": "^3.4.10",
     "url-loader": "^1.1.2",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
