--- a/public/package.json
+++ b/public/package.json
@@ -28,23 +28,22 @@
   "author": "Dave O",
   "license": "ISC",
   "dependencies": {
-    "@angular/animations": "^7.2.13",
-    "@angular/common": "^7.2.13",
-    "@angular/compiler": "^7.2.13",
-    "@angular/core": "^7.2.13",
-    "@angular/forms": "^7.2.13",
-    "@angular/http": "^7.2.13",
-    "@angular/platform-browser": "^7.2.13",
-    "@angular/platform-browser-dynamic": "^7.2.13",
-    "@angular/router": "^7.2.13",
-    "@types/node": "^10.14.5",
+    "@angular/animations": "^7.2.15",
+    "@angular/common": "^7.2.15",
+    "@angular/compiler": "^7.2.15",
+    "@angular/core": "^7.2.15",
+    "@angular/forms": "^7.2.15",
+    "@angular/http": "^7.2.15",
+    "@angular/platform-browser": "^7.2.15",
+    "@angular/platform-browser-dynamic": "^7.2.15",
+    "@angular/router": "^7.2.15",
+    "@types/node": "^10.14.10",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.3.1",
-    "core-js": "^2.6.5",
     "font-awesome": "^4.7.0",
     "handlebars": "^4.1.2",
     "helpers": "0.0.6",
-    "jquery": "^3.4.0",
+    "jquery": "^3.4.1",
     "lodash": "^4.17.11",
     "lodash-es": "^4.17.11",
     "marked": "^0.6.2",
@@ -53,67 +52,68 @@
     "pdfjs-dist": "^2.0.489",
     "popper.js": "^1.15.0",
     "redux": "^4.0.1",
-    "rxjs": "^6.4.0",
-    "rxjs-compat": "^6.4.0",
-    "tablesorter": "^2.31.1",
-    "zone.js": "^0.8.29"
+    "rxjs": "^6.5.2",
+    "rxjs-compat": "^6.5.2",
+    "tablesorter": "^2.31.1"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^7.2.13",
-    "@ngtools/webpack": "^7.3.8",
-    "@types/core-js": "^2.5.0",
-    "@types/jasmine": "^3.3.12",
-    "@types/lodash": "^4.14.123",
-    "@types/webpack": "^4.4.27",
+    "@angular/compiler-cli": "^7.2.15",
+    "@ngtools/webpack": "^7.3.9",
+    "@types/core-js": "^2.5.2",
+    "@types/jasmine": "^3.3.13",
+    "@types/lodash": "^4.14.134",
+    "@types/webpack": "^4.4.33",
     "auto-reload-brunch": "^2.7.1",
+    "autoprefixer": "^9.6.0",
     "babel-brunch": "^7.0.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
-    "babel-loader": "^8.0.5",
+    "babel-loader": "^8.0.6",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-angular2": "0.0.2",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
-    "browser-sync": "^2.26.3",
+    "browser-sync": "^2.26.7",
     "browserify": "^16.2.3",
-    "browserify-css": "^0.14.0",
+    "browserify-css": "^0.15.0",
     "browserify-shim": "^3.8.14",
     "buffer": "^5.2.1",
     "clean-css-brunch": "^2.10.0",
-    "clean-webpack-plugin": "^1.0.1",
+    "clean-webpack-plugin": "^3.0.0",
     "copy": "^0.3.1",
-    "copy-webpack-plugin": "^4.6.0",
+    "copy-webpack-plugin": "^5.0.3",
     "copycat-brunch": "^1.1.1",
+    "core-js": "^2.6.9",
     "css-loader": "^2.1.1",
     "cssify": "^1.0.3",
     "csslint": "^1.0.5",
     "de-indent": "^1.0.2",
-    "del": "^3.0.0",
+    "del": "^4.1.1",
     "envify": "^4.1.0",
     "eslint-brunch": "^3.12.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-loader": "^2.1.2",
-    "eslint-plugin-html": "^5.0.3",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-html": "^5.0.5",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
-    "events": "^1.1.1",
+    "events": "^3.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "fancy-log": "^1.3.3",
     "file-loader": "^3.0.1",
     "fs": "0.0.1-security",
     "fuse-box": "^3.7.1",
-    "google-closure-compiler": "^20190301.0.0",
-    "gulp": "^4.0.1",
+    "google-closure-compiler": "^20190618.0.0",
+    "gulp": "^4.0.2",
     "gulp-babel": "^7.0.1",
-    "gulp-better-rollup": "^3.4.0",
+    "gulp-better-rollup": "^4.0.1",
     "gulp-bootlint": "^0.10.2",
-    "gulp-copy": "^1.1.0",
+    "gulp-copy": "^4.0.1",
     "gulp-csslint": "^1.0.1",
     "gulp-env": "^0.4.0",
-    "gulp-eslint": "^4.0.2",
+    "gulp-eslint": "^5.0.0",
     "gulp-exec": "^3.0.2",
     "gulp-filelog": "^0.4.1",
     "gulp-flatten": "^0.4.0",
@@ -128,6 +128,7 @@
     "gulp-uglify": "^3.0.2",
     "gulp-uglify-es": "^1.0.4",
     "html-webpack-plugin": "^3.2.0",
+    "install": "^0.12.2",
     "jasmine-core": "^3.4.0",
     "jasmine-jquery": "^2.1.1",
     "jasmine-promise-wrapper": "0.0.3",
@@ -143,12 +144,12 @@
     "karma-opera-launcher": "^1.0.0",
     "karma-steal-npm": "^0.1.5",
     "karma-story-reporter": "^0.3.1",
-    "karma-typescript": "^3.0.13",
-    "karma-typescript-angular2-transform": "^1.0.2",
+    "karma-typescript": "^4.1.0",
+    "karma-typescript-angular2-transform": "^4.1.0",
     "karma-typescript-preprocessor": "^0.4.0",
     "loose-envify": "^1.4.0",
-    "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.10.0",
+    "mini-css-extract-plugin": "^0.7.0",
+    "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "parcel": "^1.12.3",
     "parcel-bundler": "^1.12.3",
@@ -156,36 +157,40 @@
     "postcss-url": "^8.0.0",
     "raw-loader": "^1.0.0",
     "resolve-url-loader": "^3.1.0",
-    "rollup": "^1.10.1",
-    "rollup-plugin-alias": "^1.5.1",
+    "rollup": "^1.16.2",
+    "rollup-plugin-alias": "^1.5.2",
     "rollup-plugin-commonjs": "^9.3.4",
-    "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-node-resolve": "^4.2.3",
-    "rollup-plugin-postcss": "^1.6.3",
+    "rollup-plugin-livereload": "^1.0.1",
+    "rollup-plugin-node-resolve": "^4.2.4",
+    "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-progress": "^1.1.1",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-serve": "^1.0.1",
     "sass-loader": "^7.1.0",
-    "steal": "2.1.14",
+    "steal": "^2.2.1",
     "steal-css": "^1.3.2",
-    "steal-tools": "2.0.11",
+    "steal-tools": "^2.2.2",
     "steal-typescript": "^0.5.0",
     "terser-brunch": "^3.0.0",
     "tsify": "^4.0.1",
-    "typescript": "3.2.4",
+    "typescript": "^3.2.4",
     "typescript-brunch": "^2.3.0",
     "uglify-es": "^3.3.9",
-    "uglify-js": "^3.5.6",
-    "url-loader": "^1.1.2",
+    "uglify-js": "^3.6.0",
+    "url-loader": "^2.0.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.1",
-    "webpack": "^4.30.0",
-    "webpack-dev-server": "^3.3.1",
+    "webpack": "^4.35.0",
+    "webpack-dev-server": "^3.7.2",
     "webpack-merge": "^4.2.1",
     "webpack-stream": "^5.2.1",
-    "webpack-strip-block": "^0.2.0"
+    "webpack-strip-block": "^0.2.0",
+    "zone.js": "^0.9.1"
   },
+  "browserslist": [
+    "defaults"
+  ],
   "browser": {
     "b/app": "./browserify/appl/js/app.js",
     "b/basecontrol": "./browserify/appl/js/utils/base.control.js",
