--- a/public/package.json
+++ b/public/package.json
@@ -48,21 +48,21 @@
     "tablesorter": "^2.31.1"
   },
   "devDependencies": {
-    "@angular/animations": "^8.0.2",
-    "@angular/common": "^8.0.2",
-    "@angular/compiler": "^8.0.2",
-    "@angular/compiler-cli": "^8.0.2",
-    "@angular/core": "^8.0.2",
-    "@angular/forms": "^8.0.2",
-    "@angular/platform-browser": "^8.0.2",
-    "@angular/platform-browser-dynamic": "^8.0.2",
-    "@angular/router": "^8.0.2",
-    "@ngtools/webpack": "^8.0.3",
+    "@angular/animations": "^8.0.3",
+    "@angular/common": "^8.0.3",
+    "@angular/compiler": "^8.0.3",
+    "@angular/compiler-cli": "^8.0.3",
+    "@angular/core": "^8.0.3",
+    "@angular/forms": "^8.0.3",
+    "@angular/platform-browser": "^8.0.3",
+    "@angular/platform-browser-dynamic": "^8.0.3",
+    "@angular/router": "^8.0.3",
+    "@ngtools/webpack": "^8.0.6",
     "@types/core-js": "^2.5.2",
     "@types/jasmine": "^3.3.13",
-    "@types/lodash": "^4.14.134",
+    "@types/lodash": "^4.14.135",
     "@types/node": "^12.0.10",
-    "@types/webpack": "^4.4.33",
+    "@types/webpack": "^4.4.34",
     "auto-reload-brunch": "^2.7.1",
     "autoprefixer": "^9.6.0",
     "babel-brunch": "^7.0.1",
@@ -95,9 +95,9 @@
     "eslint-config-standard": "^12.0.0",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-html": "^5.0.5",
-    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "events": "^3.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -144,20 +144,21 @@
     "karma-opera-launcher": "^1.0.0",
     "karma-steal-npm": "^0.1.5",
     "karma-story-reporter": "^0.3.1",
-    "karma-typescript": "^4.1.0",
-    "karma-typescript-angular2-transform": "^4.1.0",
+    "karma-typescript": "^4.1.1",
+    "karma-typescript-angular2-transform": "^4.1.1",
     "karma-typescript-preprocessor": "^0.4.0",
     "loose-envify": "^1.4.0",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "parcel": "^1.12.3",
     "parcel-bundler": "^1.12.3",
+    "parcel-plugin-strip": "file:parcel/appl/js/parcel-plugin-strip",
     "postcss-import": "^12.0.1",
     "postcss-url": "^8.0.0",
     "raw-loader": "^1.0.0",
     "resolve-url-loader": "^3.1.0",
-    "rollup": "^1.16.2",
+    "rollup": "^1.16.3",
     "rollup-plugin-alias": "^1.5.2",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-livereload": "^1.0.1",
@@ -171,13 +172,14 @@
     "steal-css": "^1.3.2",
     "steal-tools": "^2.2.2",
     "steal-typescript": "^0.5.0",
+    "stripcode-brunch": "file:brunch/appl/js/stripcode-brunch",
     "terser-brunch": "^3.0.0",
     "tsify": "^4.0.1",
     "typescript": "^3.4.5",
     "typescript-brunch": "^2.3.0",
     "uglify-es": "^3.3.9",
     "uglify-js": "^3.6.0",
-    "url-loader": "^2.0.0",
+    "url-loader": "^2.0.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.1",
