--- a/public/package.json
+++ b/public/package.json
@@ -27,6 +27,7 @@
   ],
   "author": "Dave O",
   "license": "ISC",
+  "sideEffects": true,
   "dependencies": {
     "@angular/animations": "^8.2.5",
     "@angular/common": "^8.2.5",
@@ -102,7 +103,7 @@
     "fancy-log": "^1.3.3",
     "file-loader": "^4.2.0",
     "fs": "0.0.1-security",
-    "fuse-box": "^4.0.0-next.132",
+    "fuse-box": "^4.0.0-next.134",
     "google-closure-compiler": "^20190819.0.0",
     "gulp": "^4.0.2",
     "gulp-better-rollup": "^4.0.1",
