--- a/public/package.json
+++ b/public/package.json
@@ -29,24 +29,25 @@
   "license": "ISC",
   "sideEffects": true,
   "dependencies": {
-    "@angular/animations": "^8.2.9",
-    "@angular/common": "^8.2.9",
-    "@angular/compiler": "^8.2.9",
-    "@angular/compiler-cli": "^8.2.9",
-    "@angular/core": "^8.2.9",
-    "@angular/forms": "^8.2.9",
+    "@angular/animations": "^8.2.14",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
     "@angular/http": "^7.2.15",
-    "@angular/platform-browser": "^8.2.9",
-    "@angular/platform-browser-dynamic": "^8.2.9",
-    "@angular/router": "^8.2.9",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
     "babel-polyfill": "^6.26.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.1",
     "browserlist": "^1.0.1",
-    "dodex": "^1.3.0",
+    "dodex": "^1.3.1",
     "dodex-input": "^1.2.0",
-    "dodex-mess": "^1.1.0",
+    "dodex-mess": "^1.1.3",
+    "elm": "^0.19.1-3",
     "font-awesome": "^4.7.0",
-    "handlebars": "^4.4.2",
+    "handlebars": "^4.5.3",
     "helpers": "0.0.6",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
@@ -55,24 +56,24 @@
     "moment": "^2.24.0",
     "pager": "^0.1.3",
     "pdfjs-dist": "^2.2.228",
-    "popper.js": "^1.15.0",
+    "popper.js": "^1.16.0",
     "redux": "^4.0.4",
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.3",
-    "tablesorter": "^2.31.1"
+    "tablesorter": "^2.31.2"
   },
   "devDependencies": {
-    "@ngtools/webpack": "^8.3.8",
+    "@ngtools/webpack": "^8.3.20",
     "@types/core-js": "^2.5.2",
-    "@types/jasmine": "^3.4.2",
+    "@types/jasmine": "^3.5.0",
     "@types/jquery": "^3.3.31",
-    "@types/lodash": "^4.14.141",
-    "@types/node": "^12.7.11",
-    "@types/webpack": "^4.39.2",
-    "@typescript-eslint/eslint-plugin": "^2.3.2",
-    "@typescript-eslint/parser": "^2.3.2",
+    "@types/lodash": "^4.14.149",
+    "@types/node": "^12.12.17",
+    "@types/webpack": "^4.41.0",
+    "@typescript-eslint/eslint-plugin": "^2.11.0",
+    "@typescript-eslint/parser": "^2.11.0",
     "auto-reload-brunch": "^2.7.1",
-    "autoprefixer": "^9.6.4",
+    "autoprefixer": "^9.7.3",
     "babel-brunch": "^7.0.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -88,25 +89,26 @@
     "buffer": "^5.4.3",
     "clean-css-brunch": "^2.10.0",
     "copy": "^0.3.1",
-    "copy-webpack-plugin": "^5.0.4",
+    "copy-webpack-plugin": "^5.1.0",
     "copycat-brunch": "^1.1.1",
-    "core-js": "^2.6.9",
-    "css-loader": "^3.2.0",
+    "core-js": "^2.6.11",
+    "css-loader": "^3.3.0",
     "cssify": "^1.0.3",
     "csslint": "^1.0.5",
     "de-indent": "^1.0.2",
     "del": "^4.1.1",
+    "elm-hot": "^1.1.4",
     "envify": "^4.1.0",
     "eslint-brunch": "^3.12.0",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "events": "^3.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "fancy-log": "^1.3.3",
-    "file-loader": "^4.2.0",
+    "file-loader": "^4.3.0",
     "fs": "0.0.1-security",
-    "fuse-box": "^4.0.0-next.141",
+    "fuse-box": "^4.0.0-next.146",
     "google-closure-compiler": "^20190909.0.0",
     "gulp": "^4.0.2",
     "gulp-better-rollup": "^4.0.1",
@@ -118,7 +120,7 @@
     "gulp-filelog": "^0.4.1",
     "gulp-flatten": "^0.4.0",
     "gulp-noop": "^1.0.0",
-    "gulp-parcel": "^0.3.5",
+    "gulp-parcel": "^0.3.6",
     "gulp-remove-code": "^3.0.4",
     "gulp-rename": "^1.4.0",
     "gulp-run-command": "0.0.9",
@@ -131,7 +133,7 @@
     "jasmine-core": "^3.5.0",
     "jasmine-jquery": "^2.1.1",
     "jasmine-promise-wrapper": "0.0.3",
-    "karma": "^4.3.0",
+    "karma": "^4.4.1",
     "karma-browserify": "^6.1.0",
     "karma-brunch": "^1.0.6",
     "karma-chrome-launcher": "^3.1.0",
@@ -148,16 +150,17 @@
     "karma-typescript-preprocessor": "^0.4.0",
     "loose-envify": "^1.4.0",
     "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.12.0",
+    "node-elm-compiler": "^5.0.4",
+    "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "parcel": "^1.12.3",
-    "parcel-bundler": "^1.12.3",
+    "parcel": "^1.12.4",
+    "parcel-bundler": "^1.12.4",
     "parcel-plugin-strip": "file:parcel/appl/js/parcel-plugin-strip",
     "postcss-import": "^12.0.1",
     "postcss-url": "^8.0.0",
     "raw-loader": "^3.1.0",
-    "resolve-url-loader": "^3.1.0",
-    "rollup": "^1.23.1",
+    "resolve-url-loader": "^3.1.1",
+    "rollup": "^1.27.9",
     "rollup-plugin-alias": "^1.5.2",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-livereload": "^1.0.4",
@@ -167,9 +170,9 @@
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-serve": "^1.0.1",
     "sass-loader": "^8.0.0",
-    "steal": "^2.2.3",
+    "steal": "^2.2.4",
     "steal-css": "^1.3.2",
-    "steal-tools": "^2.2.2",
+    "steal-tools": "^2.2.5",
     "steal-typescript": "^0.5.0",
     "stripcode-brunch": "file:brunch/appl/js/stripcode-brunch",
     "terser-brunch": "^3.0.0",
@@ -178,13 +181,13 @@
     "typescript": "^3.5.3",
     "typescript-brunch": "^2.3.0",
     "uglify-es": "^3.3.9",
-    "uglify-js": "^3.6.0",
-    "url-loader": "^2.2.0",
+    "uglify-js": "^3.7.2",
+    "url-loader": "^2.3.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.1",
-    "webpack": "^4.41.0",
-    "webpack-dev-server": "^3.8.2",
+    "webpack": "^4.41.2",
+    "webpack-dev-server": "^3.9.0",
     "webpack-merge": "^4.2.2",
     "webpack-stream": "^5.2.1",
     "webpack-strip-block": "^0.2.0",
