--- a/public/package.json
+++ b/public/package.json
@@ -45,7 +45,6 @@
     "dodex-input": "^1.3.0",
     "dodex-mess": "^1.1.4",
     "font-awesome": "^4.7.0",
-    "fuse-box": "^4.0.0-next.146",
     "handlebars": "^4.7.3",
     "helpers": "0.0.6",
     "jquery": "^3.4.1",
@@ -70,7 +69,7 @@
     "@types/jasmine": "^3.5.6",
     "@types/jquery": "^3.3.33",
     "@types/lodash": "^4.14.149",
-    "@types/node": "^12.12.28",
+    "@types/node": "^13.7.4",
     "@types/webpack": "^4.41.6",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
@@ -109,6 +108,7 @@
     "fancy-log": "^1.3.3",
     "file-loader": "^5.1.0",
     "fs": "0.0.1-security",
+    "fuse-box": "^3.7.1",
     "gulp": "^4.0.2",
     "gulp-better-rollup": "^4.0.1",
     "gulp-bootlint": "^1.0.0",
