--- a/public/package.json
+++ b/public/package.json
@@ -71,8 +71,8 @@
     "@types/lodash": "^4.14.149",
     "@types/node": "^13.9.1",
     "@types/webpack": "^4.41.7",
-    "@typescript-eslint/eslint-plugin": "^2.23.0",
-    "@typescript-eslint/parser": "^2.23.0",
+    "@typescript-eslint/eslint-plugin": "^2.24.0",
+    "@typescript-eslint/parser": "^2.24.0",
     "auto-reload-brunch": "^2.7.1",
     "autoprefixer": "^9.7.4",
     "babel-brunch": "^7.0.1",
@@ -108,7 +108,7 @@
     "fancy-log": "^1.3.3",
     "file-loader": "^5.1.0",
     "fs": "0.0.1-security",
-    "fuse-box": "^3.7.1",
+    "fuse-box": "^4.0.0-next.411",
     "gulp": "^4.0.2",
     "gulp-better-rollup": "^4.0.1",
     "gulp-bootlint": "^1.0.0",
