added paths to tsconfig

--- a/public/fusebox/tsconfig.json
+++ b/public/fusebox/tsconfig.json
@@ -28,6 +28,10 @@
             "jasmine",
             "jquery",
             "node"
-        ]
+        ],
+        "paths": {
+            "js/*": ["./js/controller/*", "./js/utils/*", "./js/*", "./jasmine/*"],
+            "ts/*": ["./components/*", "./services/*", "./*"]
+          }
     }
 }
