--- a/public/package.json
+++ b/public/package.json
@@ -29,78 +29,79 @@
   "license": "ISC",
   "sideEffects": true,
   "dependencies": {
-    "@angular/animations": "^9.0.6",
-    "@angular/common": "^9.0.6",
-    "@angular/compiler": "^9.0.6",
-    "@angular/compiler-cli": "^9.0.6",
-    "@angular/core": "^9.0.6",
-    "@angular/forms": "^9.0.6",
+    "@angular/animations": "^9.1.11",
+    "@angular/common": "^9.1.11",
+    "@angular/compiler": "^9.1.11",
+    "@angular/compiler-cli": "^9.1.11",
+    "@angular/core": "^9.1.11",
+    "@angular/forms": "^9.1.11",
     "@angular/http": "^7.2.16",
-    "@angular/platform-browser": "^9.0.6",
-    "@angular/platform-browser-dynamic": "^9.0.6",
-    "@angular/router": "^9.0.6",
+    "@angular/platform-browser": "^9.1.11",
+    "@angular/platform-browser-dynamic": "^9.1.11",
+    "@angular/router": "^9.1.11",
     "babel-polyfill": "^6.26.0",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.0",
     "dodex": "^1.3.4",
     "dodex-input": "^1.3.0",
     "dodex-mess": "^1.2.1",
     "font-awesome": "^4.7.0",
-    "handlebars": "^4.7.3",
+    "handlebars": "^4.7.6",
     "helpers": "0.0.6",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "lodash": "^4.17.15",
     "lodash-es": "^4.17.15",
     "marked": "^0.7.0",
-    "moment": "^2.24.0",
+    "moment": "^2.27.0",
     "pager": "^0.1.3",
-    "pdfjs-dist": "^2.2.228",
+    "pdfjs-dist": "^2.4.456",
     "popper.js": "^1.16.1",
     "redux": "^4.0.5",
-    "rxjs": "^6.5.4",
-    "rxjs-compat": "^6.5.4",
+    "rxjs": "^6.5.5",
+    "rxjs-compat": "^6.5.5",
     "tablesorter": "^2.31.3"
   },
   "devDependencies": {
-    "@ngtools/webpack": "^9.0.6",
-    "@rollup/plugin-alias": "^3.0.1",
+    "@ngtools/webpack": "^9.1.9",
+    "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-commonjs": "^11.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.1",
+    "@rollup/plugin-node-resolve": "^7.1.3",
     "@types/core-js": "^2.5.3",
-    "@types/jasmine": "^3.5.9",
-    "@types/jquery": "^3.3.33",
-    "@types/lodash": "^4.14.149",
-    "@types/node": "^13.9.1",
-    "@types/webpack": "^4.41.7",
-    "@typescript-eslint/eslint-plugin": "^2.24.0",
-    "@typescript-eslint/parser": "^2.24.0",
+    "@types/jasmine": "^3.5.11",
+    "@types/jquery": "^3.5.0",
+    "@types/lodash": "^4.14.156",
+    "@types/node": "^13.13.12",
+    "@types/webpack": "^4.41.17",
+    "@typescript-eslint/eslint-plugin": "^3.3.0",
+    "@typescript-eslint/parser": "^3.3.0",
     "auto-reload-brunch": "^2.7.1",
-    "autoprefixer": "^9.7.4",
+    "autoprefixer": "^9.8.2",
     "babel-brunch": "^7.0.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.1.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-angular2": "0.0.2",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.26.7",
-    "browserify": "^16.5.0",
+    "browserify": "^16.5.1",
     "browserify-css": "^0.15.0",
     "browserify-shim": "^3.8.14",
-    "buffer": "^5.5.0",
+    "buffer": "^5.6.0",
     "clean-css-brunch": "^3.0.0",
     "copy": "^0.3.1",
     "copy-webpack-plugin": "^5.1.1",
     "copycat-brunch": "^1.1.1",
     "core-js": "^2.6.11",
-    "css-loader": "^3.4.2",
+    "css-loader": "^3.6.0",
     "cssify": "^1.0.3",
     "csslint": "^1.0.5",
     "de-indent": "^1.0.2",
     "del": "^5.1.0",
     "envify": "^4.1.0",
+    "eslint": "^7.3.0",
     "eslint-brunch": "^3.12.0",
-    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "events": "^3.1.0",
@@ -108,10 +109,10 @@
     "fancy-log": "^1.3.3",
     "file-loader": "^5.1.0",
     "fs": "0.0.1-security",
-    "fuse-box": "^4.0.0-next.411",
+    "fuse-box": "^4.0.0-next.439",
     "gulp": "^4.0.2",
     "gulp-better-rollup": "^4.0.1",
-    "gulp-bootlint": "^1.0.0",
+    "gulp-bootlint": "^1.1.0",
     "gulp-copy": "^4.0.1",
     "gulp-csslint": "^1.0.1",
     "gulp-env": "^0.4.0",
@@ -138,7 +139,7 @@
     "karma-chrome-launcher": "^3.1.0",
     "karma-commonjs": "^1.0.0",
     "karma-firefox-launcher": "^1.3.0",
-    "karma-jasmine": "^3.1.1",
+    "karma-jasmine": "^3.3.1",
     "karma-jasmine-jquery": "^0.1.1",
     "karma-mocha-reporter": "^2.2.5",
     "karma-opera-launcher": "^1.0.0",
@@ -149,19 +150,19 @@
     "karma-typescript-preprocessor": "^0.4.0",
     "loose-envify": "^1.4.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "parcel": "^1.12.4",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-strip": "file:parcel/appl/js/parcel-plugin-strip",
     "postcss-import": "^12.0.1",
     "postcss-url": "^8.0.0",
-    "raw-loader": "^4.0.0",
+    "raw-loader": "^4.0.1",
     "resolve-url-loader": "^3.1.1",
-    "rollup": "^2.0.6",
-    "rollup-plugin-livereload": "^1.0.4",
-    "rollup-plugin-postcss": "^2.5.0",
-    "rollup-plugin-progress": "^1.1.1",
+    "rollup": "^2.18.0",
+    "rollup-plugin-livereload": "^1.3.0",
+    "rollup-plugin-postcss": "^2.9.0",
+    "rollup-plugin-progress": "^1.1.2",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-terser": "^5.3.0",
@@ -173,17 +174,17 @@
     "stripcode-brunch": "file:brunch/appl/js/stripcode-brunch",
     "terser-brunch": "^4.0.0",
     "tsify": "^4.0.1",
-    "tslib": "^1.11.1",
-    "typescript": "^3.7.5",
+    "tslib": "^1.13.0",
+    "typescript": "^3.8.3",
     "typescript-brunch": "^2.3.0",
     "uglify-es": "^3.3.9",
-    "uglify-js": "^3.8.0",
+    "uglify-js": "^3.10.0",
     "url-loader": "^3.0.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.1",
-    "webpack": "^4.42.0",
-    "webpack-dev-server": "^3.10.3",
+    "webpack": "^4.43.0",
+    "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.2",
     "webpack-stream": "^5.2.1",
     "webpack-strip-block": "^0.2.0",
