--- a/public/webpack/tsconfig.json
+++ b/public/webpack/tsconfig.json
@@ -29,7 +29,7 @@
     ],
     "allowUnreachableCode": true
   },
-  "include": [
-    "appl/**/*.*", "appl/**/*.js"
+  "files": [
+    "appl/main.ts"
   ]
 }
