--- a/public/package.json
+++ b/public/package.json
@@ -29,18 +29,18 @@
   "license": "ISC",
   "sideEffects": true,
   "dependencies": {
-    "@angular/animations": "^10.1.0",
-    "@angular/common": "^10.1.0",
-    "@angular/compiler": "^10.1.0",
-    "@angular/compiler-cli": "^10.1.0",
-    "@angular/core": "^10.1.0",
-    "@angular/forms": "^10.1.0",
+    "@angular/animations": "^11.0.9",
+    "@angular/cli": "^11.0.6",
+    "@angular/common": "^11.0.9",
+    "@angular/compiler": "^11.0.9",
+    "@angular/compiler-cli": "^11.0.9",
+    "@angular/core": "^11.0.9",
+    "@angular/forms": "^11.0.9",
     "@angular/http": "^7.2.16",
-    "@angular/platform-browser": "^10.1.0",
-    "@angular/platform-browser-dynamic": "^10.1.0",
-    "@angular/router": "^10.1.0",
-    "babel-polyfill": "^6.26.0",
-    "bootstrap": "^4.5.2",
+    "@angular/platform-browser": "^11.0.9",
+    "@angular/platform-browser-dynamic": "^11.0.9",
+    "@angular/router": "^11.0.9",
+    "bootstrap": "^4.6.0",
     "dodex": "^1.3.4",
     "dodex-input": "^1.3.0",
     "dodex-mess": "^1.2.1",
@@ -48,68 +48,71 @@
     "handlebars": "^4.7.6",
     "helpers": "0.0.6",
     "jquery": "^3.5.1",
+    "karma": "^6.0.0",
     "lodash": "^4.17.20",
-    "lodash-es": "^4.17.15",
-    "marked": "^0.7.0",
-    "moment": "^2.27.0",
+    "lodash-es": "^4.17.20",
+    "marked": "^1.2.7",
+    "moment": "^2.29.1",
     "pager": "^0.1.3",
-    "pdfjs-dist": "^2.4.456",
+    "pdfjs-dist": "^2.5.207",
     "popper.js": "^1.16.1",
     "redux": "^4.0.5",
     "rxjs": "^6.6.3",
     "rxjs-compat": "^6.6.3",
-    "tablesorter": "^2.31.3"
+    "tablesorter": "^2.31.3",
+    "un": "0.0.0"
   },
   "devDependencies": {
-    "@ngtools/webpack": "^10.1.0",
+    "@metahub/karma-jasmine-jquery": "^4.0.1",
+    "@ngtools/webpack": "^11.1.0-rc.0",
     "@rollup/plugin-alias": "^3.1.1",
-    "@rollup/plugin-commonjs": "^13.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.3",
+    "@rollup/plugin-buble": "^0.21.3",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.1.0",
     "@types/core-js": "^2.5.4",
-    "@types/jasmine": "^3.5.14",
-    "@types/jquery": "^3.5.1",
-    "@types/lodash": "^4.14.161",
-    "@types/node": "^14.6.4",
-    "@types/webpack": "^4.41.22",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
+    "@types/jasmine": "^3.6.3",
+    "@types/jquery": "^3.5.5",
+    "@types/lodash": "^4.14.168",
+    "@types/node": "^14.14.22",
+    "@types/webpack": "^4.41.26",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
     "auto-reload-brunch": "^2.7.1",
     "autoprefixer": "^9.8.6",
     "babel-brunch": "^7.0.1",
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.2",
     "babel-plugin-external-helpers": "^6.22.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-angular2": "0.0.2",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
-    "browser-sync": "^2.26.12",
-    "browserify": "^16.5.2",
+    "browser-sync": "^2.26.13",
+    "browserify": "^17.0.0",
     "browserify-css": "^0.15.0",
     "browserify-shim": "^3.8.14",
-    "buffer": "^5.6.0",
+    "buffer": "^6.0.3",
     "clean-css-brunch": "^3.0.0",
     "copy": "^0.3.1",
-    "copy-webpack-plugin": "^5.1.2",
+    "copy-webpack-plugin": "^7.0.0",
     "copycat-brunch": "^1.1.1",
-    "core-js": "^2.6.11",
-    "css-loader": "^3.6.0",
+    "core-js": "^2.6.12",
+    "css-loader": "^5.0.1",
     "cssify": "^1.0.3",
     "csslint": "^1.0.5",
     "de-indent": "^1.0.2",
-    "del": "^5.1.0",
+    "del": "^6.0.0",
     "envify": "^4.1.0",
-    "eslint": "^7.8.1",
+    "eslint": "^7.18.0",
     "eslint-brunch": "^3.12.0",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-standard": "^5.0.0",
     "events": "^3.2.0",
-    "extract-text-webpack-plugin": "^3.0.2",
     "fancy-log": "^1.3.3",
-    "file-loader": "^5.1.0",
+    "file-loader": "^6.2.0",
     "fs": "0.0.1-security",
-    "fuse-box": "^4.0.0-next.444",
+    "fuse-box": "^4.0.0",
     "gulp": "^4.0.2",
     "gulp-better-rollup": "^4.0.1",
     "gulp-bootlint": "^1.1.0",
@@ -124,74 +127,74 @@
     "gulp-remove-code": "^3.0.4",
     "gulp-rename": "^2.0.0",
     "gulp-run-command": "0.0.10",
-    "gulp-sourcemaps": "^2.6.5",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-strip-code": "^0.1.4",
-    "gulp-typescript": "^5.0.1",
+    "gulp-typescript": "^6.0.0-alpha.1",
     "gulp-uglify": "^3.0.2",
     "gulp-uglify-es": "^2.0.0",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^5.0.0-beta.5",
     "jasmine-core": "^3.6.0",
     "jasmine-jquery": "^2.1.1",
     "jasmine-promise-wrapper": "0.0.3",
-    "karma": "^5.2.2",
-    "karma-browserify": "^7.0.0",
-    "karma-brunch": "^1.0.6",
+    "karma-browserify": "^8.0.0",
+    "karma-brunch": "file:brunch/karma-brunch",
     "karma-chrome-launcher": "^3.1.0",
     "karma-commonjs": "^1.0.0",
-    "karma-firefox-launcher": "^1.3.0",
-    "karma-jasmine": "^3.3.1",
-    "karma-jasmine-jquery": "^0.1.1",
+    "karma-firefox-launcher": "^2.1.0",
+    "karma-jasmine": "^4.0.1",
     "karma-mocha-reporter": "^2.2.5",
     "karma-opera-launcher": "^1.0.0",
     "karma-steal-npm": "^0.1.5",
     "karma-story-reporter": "^0.3.1",
-    "karma-typescript": "^5.1.0",
-    "karma-typescript-angular2-transform": "^5.1.0",
+    "karma-typescript": "^5.2.0",
+    "karma-typescript-angular2-transform": "^5.2.0",
     "karma-typescript-preprocessor": "^0.4.0",
     "loose-envify": "^1.4.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "mini-css-extract-plugin": "^1.3.4",
+    "node-sass": "^5.0.0",
     "parcel": "^1.12.4",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-strip": "file:parcel/appl/js/parcel-plugin-strip",
     "postcss-import": "^12.0.1",
     "postcss-url": "^8.0.0",
-    "raw-loader": "^4.0.1",
-    "resolve-url-loader": "^3.1.1",
-    "rollup": "^2.26.11",
-    "rollup-plugin-livereload": "^1.3.0",
-    "rollup-plugin-postcss": "^2.9.0",
+    "raw-loader": "^4.0.2",
+    "resolve-url-loader": "^3.1.2",
+    "rollup": "^2.37.1",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-progress": "^1.1.2",
     "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-serve": "^1.0.4",
-    "rollup-plugin-terser": "^5.3.1",
-    "sass-loader": "^8.0.2",
+    "rollup-plugin-serve": "^1.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "sass-loader": "^10.1.1",
     "steal": "^2.2.4",
     "steal-css": "^1.3.2",
     "steal-tools": "^2.2.6",
     "steal-typescript": "^0.5.0",
     "stripcode-brunch": "file:brunch/appl/js/stripcode-brunch",
     "terser-brunch": "^4.0.0",
+    "terser-webpack-plugin": "^5.1.1",
     "tsify": "^5.0.2",
-    "tslib": "^1.13.0",
-    "typescript": "^3.9.7",
+    "tslib": "^2.1.0",
+    "typescript": "^4.0.5",
     "typescript-brunch": "^2.3.0",
     "uglify-es": "^3.3.9",
-    "uglify-js": "^3.10.4",
-    "url-loader": "^3.0.0",
+    "uglify-js": "^3.12.5",
+    "url-loader": "^4.1.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.1",
-    "webpack": "^4.44.1",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2",
-    "webpack-stream": "^5.2.1",
-    "webpack-strip-block": "^0.2.0",
-    "zone.js": "^0.10.3"
+    "webpack": "^5.16.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3",
+    "webpack-stream": "^6.1.1",
+    "webpack-strip-block": "^0.3.0",
+    "zone.js": "^0.11.3"
   },
   "browserslist": [
-    "defaults"
+    "defaults",
+    "not op_mob > 1"
   ],
   "browser": {
     "b/app": "./browserify/appl/js/app.js",
