--- a/public/package.json
+++ b/public/package.json
@@ -1,6 +1,6 @@
 {
   "name": "embedded-acceptance-tests-ng",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "description": "Karma Jasmine Browserify, Fusebox, Webpack, Parcel, Angular Testing",
   "private": true,
   "scripts": {
@@ -29,17 +29,18 @@
   "license": "ISC",
   "sideEffects": true,
   "dependencies": {
-    "@angular/animations": "^11.0.9",
-    "@angular/cli": "^11.0.6",
-    "@angular/common": "^11.0.9",
-    "@angular/compiler": "^11.0.9",
-    "@angular/compiler-cli": "^11.0.9",
-    "@angular/core": "^11.0.9",
-    "@angular/forms": "^11.0.9",
+    "@angular/animations": "^11.1.0",
+    "@angular/cli": "^11.1.0",
+    "@angular/common": "^11.1.0",
+    "@angular/compiler": "^11.1.0",
+    "@angular/compiler-cli": "^11.1.0",
+    "@angular/core": "^11.1.0",
+    "@angular/forms": "^11.1.0",
     "@angular/http": "^7.2.16",
-    "@angular/platform-browser": "^11.0.9",
-    "@angular/platform-browser-dynamic": "^11.0.9",
-    "@angular/router": "^11.0.9",
+    "@angular/platform-browser": "^11.1.0",
+    "@angular/platform-browser-dynamic": "^11.1.0",
+    "@angular/router": "^11.1.0",
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "bootstrap": "^4.6.0",
     "dodex": "^1.3.4",
     "dodex-input": "^1.3.0",
@@ -48,7 +49,8 @@
     "handlebars": "^4.7.6",
     "helpers": "0.0.6",
     "jquery": "^3.5.1",
-    "karma": "^6.0.0",
+    "jsoneditor": "^9.1.8",
+    "karma": "^6.0.1",
     "lodash": "^4.17.20",
     "lodash-es": "^4.17.20",
     "marked": "^1.2.7",
@@ -59,16 +61,17 @@
     "redux": "^4.0.5",
     "rxjs": "^6.6.3",
     "rxjs-compat": "^6.6.3",
-    "tablesorter": "^2.31.3",
-    "un": "0.0.0"
+    "tablesorter": "^2.31.3"
   },
   "devDependencies": {
     "@metahub/karma-jasmine-jquery": "^4.0.1",
-    "@ngtools/webpack": "^11.1.0-rc.0",
+    "@ngtools/webpack": "^11.1.0",
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.1.0",
+    "@rollup/plugin-sucrase": "^3.1.0",
+    "@rollup/plugin-typescript": "^8.1.0",
     "@types/core-js": "^2.5.4",
     "@types/jasmine": "^3.6.3",
     "@types/jquery": "^3.5.5",
@@ -132,7 +135,7 @@
     "gulp-typescript": "^6.0.0-alpha.1",
     "gulp-uglify": "^3.0.2",
     "gulp-uglify-es": "^2.0.0",
-    "html-webpack-plugin": "^5.0.0-beta.5",
+    "html-webpack-plugin": "^5.0.0-beta.6",
     "jasmine-core": "^3.6.0",
     "jasmine-jquery": "^2.1.1",
     "jasmine-promise-wrapper": "0.0.3",
@@ -159,7 +162,7 @@
     "postcss-url": "^8.0.0",
     "raw-loader": "^4.0.2",
     "resolve-url-loader": "^3.1.2",
-    "rollup": "^2.37.1",
+    "rollup": "^2.38.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-progress": "^1.1.2",
@@ -184,7 +187,7 @@
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.1",
-    "webpack": "^5.16.0",
+    "webpack": "^5.17.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3",
