--- a/public/package.json
+++ b/public/package.json
@@ -63,8 +63,14 @@
     "tablesorter": "^2.31.3"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.13.5",
+    "@babel/preset-typescript": "^7.13.0",
     "@metahub/karma-jasmine-jquery": "^4.0.1",
     "@ngtools/webpack": "^11.1.0",
+    "@parcel/babel-plugin-transform-runtime": "^2.0.0-nightly.2259",
+    "@parcel/config-default": "^2.0.0-nightly.637",
+    "@parcel/core": "^2.0.0-nightly.635",
+    "@parcel/transformer-typescript-tsc": "^2.0.0-nightly.637",
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-commonjs": "^17.0.0",
@@ -155,9 +161,8 @@
     "loose-envify": "^1.4.0",
     "mini-css-extract-plugin": "^1.3.4",
     "node-sass": "^5.0.0",
-    "parcel": "^1.12.4",
-    "parcel-bundler": "^1.12.4",
-    "parcel-plugin-strip": "file:parcel/appl/js/parcel-plugin-strip",
+    "parcel": "^2.0.0-nightly.635",
+    "parcel-transformer-strip": "file:parcel/appl/js/parcel-transformer-strip",
     "postcss-import": "^10.0.0",
     "postcss-url": "^8.0.0",
     "raw-loader": "^4.0.2",
