--- a/public/package.json
+++ b/public/package.json
@@ -1,6 +1,6 @@
 {
   "name": "embedded-acceptance-tests-ng",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "Karma Jasmine Browserify, Fusebox, Webpack, Parcel, Angular Testing",
   "private": true,
   "scripts": {
@@ -28,19 +28,9 @@
   "author": "Dave O",
   "license": "ISC",
   "dependencies": {
-    "@angular/animations": "^12.2.13",
-    "@angular/common": "^12.2.13",
-    "@angular/compiler": "^12.2.13",
-    "@angular/compiler-cli": "^12.2.13",
-    "@angular/core": "^12.2.13",
-    "@angular/forms": "^12.2.13",
-    "@angular/platform-browser": "^12.2.13",
-    "@angular/platform-browser-dynamic": "^12.2.13",
-    "@angular/router": "^12.2.13",
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "@ngtools/webpack": "^12.2.13",
-    "@popperjs/core": "^2.10.2",
-    "@types/estree": "0.0.50",
+    "@fortawesome/fontawesome-free": "^6.0.0",
+    "@ngtools/webpack": "^12.2.16",
+    "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
     "brunch": "^4.0.0",
     "dodex": "^1.4.0",
@@ -49,43 +39,47 @@
     "handlebars": "^4.7.7",
     "helpers": "0.0.6",
     "jquery": "^3.6.0",
-    "jsoneditor": "^9.5.7",
+    "jsoneditor": "^9.7.2",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "moment": "^2.29.1",
-    "pdfjs-dist": "^2.10.377",
+    "pdfjs-dist": "^2.12.313",
     "redux": "^4.1.2",
     "rxjs-compat": "^6.6.7",
     "tablesorter": "^2.31.3"
   },
   "devDependencies": {
-    "@angular/http": "^7.2.16",
-    "@babel/plugin-proposal-decorators": "^7.16.0",
-    "@babel/preset-typescript": "^7.16.0",
+    "@angular/animations": "^12.2.16",
+    "@angular/common": "^12.2.16",
+    "@angular/compiler": "^12.2.16",
+    "@angular/compiler-cli": "^12.2.16",
+    "@angular/core": "^12.2.16",
+    "@angular/forms": "^13.2.3",
+    "@angular/platform-browser": "^12.2.16",
+    "@angular/platform-browser-dynamic": "^12.2.16",
+    "@angular/router": "^12.2.16",
+    "@babel/plugin-proposal-decorators": "^7.17.2",
+    "@babel/preset-typescript": "^7.16.7",
     "@metahub/karma-jasmine-jquery": "^4.0.1",
-    "@parcel/babel-plugin-transform-runtime": "^2.0.1",
-    "@parcel/config-default": "^2.0.1",
-    "@parcel/core": "^2.0.1",
-    "@parcel/optimizer-esbuild": "^2.0.1",
-    "@parcel/transformer-typescript-tsc": "^2.0.1",
-    "@rollup/plugin-alias": "^3.1.8",
+    "@parcel/transformer-typescript-tsc": "^2.3.2",
+    "@rollup/plugin-alias": "^3.1.9",
     "@rollup/plugin-buble": "^0.21.3",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.0.6",
-    "@rollup/plugin-sucrase": "^4.0.1",
-    "@rollup/plugin-typescript": "^8.3.0",
+    "@rollup/plugin-commonjs": "^21.0.2",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-sucrase": "^4.0.2",
+    "@rollup/plugin-typescript": "^8.3.1",
     "@types/core-js": "^2.5.5",
-    "@types/jasmine": "^3.10.2",
-    "@types/jquery": "^3.5.8",
-    "@types/lodash": "^4.14.176",
-    "@types/node": "^16.11.7",
+    "@types/estree": "^0.0.51",
+    "@types/jasmine": "^3.10.3",
+    "@types/jquery": "^3.5.13",
+    "@types/lodash": "^4.14.178",
+    "@types/node": "^17.0.21",
     "@types/webpack": "^5.28.0",
-    "@typescript-eslint/eslint-plugin": "^5.3.1",
-    "@typescript-eslint/parser": "^5.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
     "auto-reload-brunch": "^3.0.1",
-    "autoprefixer": "^10.4.0",
+    "autoprefixer": "^10.4.2",
     "babel-brunch": "^7.0.1",
-    "babel-cli": "^6.26.0",
     "babel-loader": "^8.2.3",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-polyfill": "^6.26.0",
@@ -100,23 +94,22 @@
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "clean-css-brunch": "^3.0.0",
     "copy": "^0.3.2",
-    "copy-webpack-plugin": "^9.0.1",
+    "copy-webpack-plugin": "^10.2.4",
     "copycat-brunch": "^1.1.1",
-    "core-js": "^3.19.1",
-    "css-loader": "^5.2.7",
-    "cssify": "^1.0.3",
+    "core-js": "^3.21.1",
+    "css-loader": "^6.6.0",
     "csslint": "^1.0.5",
     "de-indent": "^1.0.2",
     "del": "^6.0.0",
     "envify": "^4.1.0",
-    "esbuild": "^0.13.12",
-    "eslint": "^7.32.0",
+    "esbuild": "^0.14.23",
+    "eslint": "^8.9.0",
     "eslint-brunch": "^3.12.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-promise": "^5.1.1",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-standard": "^5.0.0",
     "events": "^3.3.0",
-    "fancy-log": "^1.3.3",
+    "fancy-log": "^2.0.0",
     "file-loader": "^6.2.0",
     "fs": "0.0.1-security",
     "fuse-box": "^4.0.1-next.8",
@@ -127,10 +120,8 @@
     "gulp-csslint": "^1.0.1",
     "gulp-env": "^0.4.0",
     "gulp-eslint": "^6.0.0",
-    "gulp-filelog": "^0.4.1",
     "gulp-flatten": "^0.4.0",
     "gulp-noop": "^1.0.1",
-    "gulp-parcel": "^0.3.6",
     "gulp-remove-code": "^3.0.4",
     "gulp-rename": "^2.0.0",
     "gulp-run-command": "0.0.10",
@@ -140,12 +131,11 @@
     "gulp-uglify": "^3.0.2",
     "gulp-uglify-es": "^3.0.0",
     "html-webpack-plugin": "^5.5.0",
-    "jasmine-core": "^3.10.1",
+    "jasmine-core": "^4.0.1",
     "jasmine-jquery": "^2.1.1",
     "jasmine-promise-wrapper": "0.0.3",
-    "karma": "^6.3.14",
+    "karma": "^6.3.16",
     "karma-browserify": "^8.1.0",
-    "karma-brunch": "^1.0.6",
     "karma-chrome-launcher": "^3.1.0",
     "karma-commonjs": "^1.0.0",
     "karma-firefox-launcher": "^2.1.2",
@@ -154,54 +144,51 @@
     "karma-opera-launcher": "^1.0.0",
     "karma-steal-npm": "^0.1.5",
     "karma-story-reporter": "^0.3.1",
-    "karma-typescript": "^5.5.2",
-    "karma-typescript-angular2-transform": "^5.5.2",
+    "karma-typescript": "^5.5.3",
+    "karma-typescript-angular2-transform": "^5.5.3",
     "karma-typescript-preprocessor": "^0.4.0",
+    "karmat-brunch": "file:brunch/appl/js/karmat-brunch",
     "loose-envify": "^1.4.0",
-    "marked": "^4.0.10",
-    "mini-css-extract-plugin": "^2.4.4",
-    "node-sass": "^7.0.0",
-    "parcel": "^2.0.1",
+    "marked": "^4.0.12",
+    "mini-css-extract-plugin": "^2.5.3",
+    "node-sass": "^7.0.1",
+    "parcel": "^2.3.2",
     "parcel-transformer-strip": "file:parcel/appl/js/parcel-transformer-strip",
     "postcss-import": "^14.0.2",
-    "postcss-loader": "^6.2.0",
+    "postcss-loader": "^6.2.1",
     "postcss-url": "^10.1.3",
     "raw-loader": "^4.0.2",
-    "resolve-url-loader": "^4.0.0",
-    "rollup": "^2.59.0",
+    "resolve-url-loader": "^5.0.0",
+    "rollup": "^2.68.0",
     "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-postcss": "^4.0.1",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-progress": "^1.1.2",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "rxjs": "^6.6.7",
-    "sass-loader": "^12.3.0",
+    "sass-loader": "^12.6.0",
     "stripcode-brunch": "file:brunch/appl/js/stripcode-brunch",
     "terser-brunch": "^4.1.0",
-    "terser-webpack-plugin": "^5.2.5",
+    "terser-webpack-plugin": "^5.3.1",
     "tsify": "^5.0.4",
     "tslib": "^2.3.1",
-    "typescript": "^4.3.5",
+    "typescript": "4.3.5",
     "typescript-brunch": "^2.3.0",
     "uglify-es": "^3.3.9",
-    "uglify-js": "^3.14.3",
+    "uglify-js": "^3.15.1",
     "url-loader": "^4.1.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^4.0.0",
-    "webpack": "^5.63.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.4.0",
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4",
     "webpack-merge": "^5.8.0",
     "webpack-stream": "^7.0.0",
     "webpack-strip-block": "^0.3.0",
     "zone.js": "^0.11.4"
   },
-  "browserslist": [
-    "defaults",
-    "not op_mob > 1"
-  ],
   "browser": {
     "b/app": "./browserify/appl/js/app.js",
     "b/basecontrol": "./browserify/appl/js/utils/base.control.js",
