--- a/package.json
+++ b/package.json
@@ -1,22 +1,38 @@
 {
   "name": "acceptance-test",
-  "version": "2.1.0",
-  "description": "Karma/Jasmine/StealJS Testing",
+  "version": "2.2.0",
+  "description": "Karma/Jasmine/Bundlers Testing",
   "scripts": {
-    "start": "node koa.js"
+    "start": "node koa"
   },
   "keywords": [
     "karma",
     "jasmine",
-    "stealjs"
+    "angular"
   ],
   "author": "Ace",
   "license": "ISC",
   "dependencies": {
-    "http": "0.0.1-security",
+    "@vscode/sqlite3": "^5.0.7",
+    "bookshelf": "^1.2.0",
+    "bs-platform": "^9.0.2",
+    "concurrently": "^7.0.0",
+    "del": "^6.0.0",
+    "dodex": "^1.4.0",
+    "dodex-input": "^1.4.0",
+    "dodex-mess": "^1.3.1",
+    "jsoneditor": "^9.7.2",
+    "knex": "^1.0.3",
     "koa": "^2.13.4",
-    "koa-logger": "^3.2.1",
-    "koa-static": "^5.0.0"
-  },
-  "devDependencies": {}
+    "koa-combine-routers": "^4.0.2",
+    "koa-cors": "^0.0.16",
+    "koa-favicon": "^2.1.0",
+    "koa-router": "^10.1.1",
+    "koa-static": "^5.0.0",
+    "pg": "^8.7.3",
+    "uuid": "^8.3.2",
+    "winston": "^3.6.0",
+    "winston-daily-rotate-file": "^4.6.1",
+    "ws": "^8.5.0"
+  }
 }
