Upgraded to Angular 17

--- a/public/esbuild/angular.json
+++ b/public/esbuild/angular.json
@@ -3,6 +3,99 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
+    "ngprod": {
+      "projectType": "application",
+            "schematics": {
+              "@schematics/angular:application": {
+                "strict": true
+              }
+            },
+      "root": "../",
+      "sourceRoot": "./",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:application",
+          "options": {
+            "allowedCommonJsDependencies": [
+              "lodash", "moment", "rxjs", "tablesorter",
+              "jsoneditor/dist/jsoneditor.min.js",
+              "handlebars/dist/handlebars.min",
+              "dodex", "dodex-mess", "dodex-input",
+              "jquery", "@fortawesome/fontawesome-free/js/all.js",
+              "@fortawesome/fontawesome-free/js/fontawesome.js"
+            ],
+            "polyfills": [
+              "appl/polyfills.ts"
+            ],
+            "tsConfig": "tsconfig.json",
+            "index": "appl/testapp.html",
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "appl/views",
+                "output": "/appl/views"
+              },
+              {
+                "glob": "**/*",
+                "input": "appl/templates",
+                "output": "/appl/templates"
+              },
+              {
+                "glob": "**/*",
+                "input": "appl/assets",
+                "output": "/appl/assets"
+              },
+              {
+                "glob": "**/*",
+                "input": "images",
+                "output": "/images"
+              },
+              {
+                "glob": "testapp.html",
+                "input": "appl",
+                "output": "/appl"
+              },{
+                "glob": "README.md",
+                "input": "../",
+                "output": "/"
+              },
+              {
+                "glob": "app_bootstrap.html",
+                "input": "appl",
+                "output": "/appl"
+              },
+              {
+                "glob": "app_footer.html",
+                "input": "appl",
+                "output": "/appl"
+              }
+            ],
+            "styles": [
+              "appl/css/site.css",
+              "appl/css/app.css",
+              "appl/css/hello.world.css",
+              "appl/css/table.css"
+            ],
+            "scripts": [],
+            "loader": {
+              ".svg": "file"
+            },
+            "outputPath": "../dist/esbuild",
+            "browser": "appl/main.ts"
+          }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "./appl/**/*.ts",
+              "./appl/**/*.js"
+            ]
+          }
+        }
+      }
+    },
     "devacc": {
       "projectType": "application",
       "schematics": {
@@ -29,7 +122,6 @@
         "lint": {
           "builder": "@angular-eslint/builder:lint",
           "options": {
-            // "configuration": {},
             "lintFilePatterns": [
               "./appl/**/*.ts",
               "./appl/**/*.js"
@@ -67,7 +159,6 @@
         "lint": {
           "builder": "@angular-eslint/builder:lint",
           "options": {
-            // "configuration": {},
             "lintFilePatterns": [
               "./appl/**/*.ts",
               "./appl/**/*.js"
@@ -77,8 +168,6 @@
       }
     }
   },
-  "defaultProject": "devacc",
   "cli": {
-    "defaultCollection": "@angular-eslint/schematics"
   }
 }
