--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "acceptance-test",
-  "version": "2.3.1",
+  "version": "2.4.0",
   "description": "Karma/Jasmine/Bundlers Testing",
   "scripts": {
-    "start": "node koa"
+    "start": "node koa",
+    "stop": "node server.stop.js"
   },
   "keywords": [
     "karma",
@@ -13,26 +14,29 @@
   "author": "Ace",
   "license": "ISC",
   "dependencies": {
-    "@vscode/sqlite3": "^5.0.8",
+    "@vscode/sqlite3": "^5.1.6-vscode",
     "bookshelf": "^1.2.0",
     "bs-platform": "^9.0.2",
-    "concurrently": "^7.1.0",
-    "del": "^6.0.0",
+    "concurrently": "^8.2.2",
     "dodex": "^1.4.1",
     "dodex-input": "^1.4.1",
-    "dodex-mess": "^1.3.2",
-    "jsoneditor": "^9.7.4",
-    "knex": "^1.0.7",
-    "koa": "^2.13.4",
+    "dodex-mess": "^1.3.4",
+    "http": "^0.0.1-security",
+    "knex": "^3.1.0",
+    "koa": "^2.15.0",
     "koa-combine-routers": "^4.0.2",
     "koa-cors": "^0.0.16",
     "koa-favicon": "^2.1.0",
-    "koa-router": "^10.1.1",
+    "koa-router": "^12.0.1",
     "koa-static": "^5.0.0",
-    "pg": "^8.7.3",
-    "uuid": "^8.3.2",
-    "winston": "^3.7.2",
-    "winston-daily-rotate-file": "^4.6.1",
-    "ws": "^8.5.0"
+    "koa2-cors": "^2.0.6",
+    "node-fetch": "^3.3.2",
+    "pg": "^8.11.3",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
+    "sqlite3": "^5.1.7",
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1",
+    "ws": "^8.16.0"
   }
 }
