--- a/public/esbuild/tsconfig.json
+++ b/public/esbuild/tsconfig.json
@@ -8,13 +8,13 @@
     "experimentalDecorators": true,
     "lib": [
       "dom",
-      "es6"
+      "es2018"
     ],
     "typeRoots": [
       "./types",
       "../node_modules/@types"
     ],
-    "module": "es2015",
+    "module": "es2020",
     "moduleResolution": "node",
     "noImplicitAny": false,
     "pretty": true,
@@ -23,8 +23,9 @@
     "strictNullChecks": false,
     "strictPropertyInitialization": false,
     "suppressImplicitAnyIndexErrors": true,
+    "ignoreDeprecations": "5.0",
     "allowJs": true,
-    // "target": "es5",
+    "target": "es2022",
     "types": [
       "jqueryfn",
       "jasmine",
@@ -32,7 +33,7 @@
       "node"
     ],
     "allowUnreachableCode": true,
-    "outDir": "./dist",
+    "outDir": "./dist"
   },
   "files": [
     "appl/main.ts"
