--- a/public/package.json
+++ b/public/package.json
@@ -1,6 +1,6 @@
 {
   "name": "embedded-acceptance-tests-ng",
-  "version": "2.3.1",
+  "version": "2.4.0",
   "description": "Karma Jasmine Browserify, Fusebox, Webpack, Parcel, Angular Testing",
   "private": true,
   "scripts": {
@@ -27,82 +27,82 @@
   "author": "Dave O",
   "license": "ISC",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.1.1",
-    "@popperjs/core": "^2.11.5",
-    "bootstrap": "^5.1.3",
+    "@fortawesome/fontawesome-free": "^6.5.1",
+    "@popperjs/core": "^2.11.8",
+    "angular-svg-icon": "^17.0.0",
+    "bootstrap": "^5.3.2",
     "dodex": "^1.4.1",
     "dodex-input": "^1.4.1",
-    "dodex-mess": "^1.3.2",
-    "handlebars": "^4.7.7",
+    "dodex-mess": "^1.3.4",
+    "fs-extra": "^11.2.0",
+    "handlebars": "^4.7.8",
     "helpers": "0.0.6",
-    "jquery": "^3.6.0",
-    "jsoneditor": "^9.7.4",
+    "jquery": "^3.7.1",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
-    "marked": "^4.0.14",
-    "moment": "^2.29.4",
-    "pdfjs-dist": "^2.13.216",
-    "redux": "^4.2.0",
+    "marked": "^5.1.2",
+    "moment": "^2.30.1",
+    "redux": "^4.2.1",
     "rxjs-compat": "^6.6.7",
     "tablesorter": "^2.31.3"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^13.1.0",
-    "@angular-devkit/build-angular": "^13.3.3",
-    "@angular-eslint/builder": "13.2.0",
-    "@angular-eslint/eslint-plugin": "13.2.0",
-    "@angular-eslint/eslint-plugin-template": "13.2.0",
-    "@angular-eslint/schematics": "13.2.0",
-    "@angular-eslint/template-parser": "13.2.0",
-    "@angular/animations": "^13.3.3",
-    "@angular/cli": "^13.3.3",
-    "@angular/common": "^13.3.3",
-    "@angular/compiler": "^13.3.3",
-    "@angular/compiler-cli": "^13.3.3",
-    "@angular/core": "^13.3.3",
-    "@angular/platform-browser": "^13.3.3",
-    "@angular/platform-browser-dynamic": "^13.3.3",
-    "@angular/router": "^13.3.3",
-    "@babel/plugin-proposal-decorators": "^7.17.9",
-    "@babel/preset-typescript": "^7.16.7",
+    "@angular-builders/custom-webpack": "^17.0.0",
+    "@angular-devkit/build-angular": "^17.1.0-rc.1",
+    "@angular-eslint/builder": "^17.2.0",
+    "@angular-eslint/eslint-plugin": "^17.2.0",
+    "@angular-eslint/eslint-plugin-template": "^17.2.0",
+    "@angular-eslint/schematics": "^17.2.0",
+    "@angular-eslint/template-parser": "^17.2.0",
+    "@angular/animations": "^17.0.9",
+    "@angular/cli": "^17.1.0-rc.1",
+    "@angular/common": "^17.0.9",
+    "@angular/compiler": "^17.0.9",
+    "@angular/compiler-cli": "^17.0.9",
+    "@angular/core": "^17.0.9",
+    "@angular/platform-browser": "^17.0.9",
+    "@angular/platform-browser-dynamic": "^17.0.9",
+    "@angular/router": "^17.0.9",
+    "@babel/plugin-proposal-decorators": "^7.23.7",
+    "@babel/preset-typescript": "^7.23.3",
     "@metahubt/karma-jasmine-jquery": "file:@metahubt/karma-jasmine-jquery",
-    "@ngtools/webpack": "^13.3.3",
-    "@parcel/transformer-typescript-tsc": "2.3.2",
-    "@rollup/plugin-alias": "^3.1.9",
-    "@rollup/plugin-buble": "^0.21.3",
-    "@rollup/plugin-commonjs": "^21.1.0",
-    "@rollup/plugin-node-resolve": "^13.2.1",
-    "@rollup/plugin-sucrase": "^4.0.3",
-    "@rollup/plugin-typescript": "^8.3.2",
-    "@types/core-js": "^2.5.5",
-    "@types/estree": "^0.0.51",
-    "@types/jasmine": "^4.0.3",
-    "@types/jquery": "^3.5.14",
-    "@types/lodash": "^4.14.182",
-    "@types/node": "^17.0.25",
-    "@types/webpack": "^5.28.0",
-    "@typescript-eslint/eslint-plugin": "5.17.0",
-    "@typescript-eslint/parser": "5.17.0",
-    "autoprefixer": "^10.4.4",
-    "babel-loader": "^8.2.4",
+    "@ngtools/webpack": "^17.0.10",
+    "@parcel/transformer-typescript-tsc": "^2.11.0",
+    "@rollup/plugin-alias": "^5.1.0",
+    "@rollup/plugin-buble": "^1.0.3",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-replace": "^5.0.5",
+    "@rollup/plugin-sucrase": "^5.0.2",
+    "@rollup/plugin-terser": "0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@types/core-js": "^2.5.8",
+    "@types/estree": "^1.0.5",
+    "@types/jasmine": "^5.1.4",
+    "@types/jquery": "^3.5.29",
+    "@types/lodash": "^4.14.202",
+    "@types/node": "^20.11.4",
+    "@types/webpack": "^5.28.5",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
+    "autoprefixer": "^10.4.16",
+    "babel-loader": "^9.1.3",
     "babel-polyfill": "^6.26.0",
-    "browser-sync": "^2.27.9",
+    "browser-sync": "^3.0.2",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "copy": "^0.3.2",
-    "copy-webpack-plugin": "^10.2.4",
-    "core-js": "^3.22.0",
-    "css-loader": "^6.7.1",
+    "copy-webpack-plugin": "^12.0.1",
+    "core-js": "^3.35.0",
+    "css-loader": "^6.9.0",
     "csslint": "^1.0.5",
-    "del": "^6.0.0",
-    "esbuild": "^0.14.36",
-    "eslint": "^8.13.0",
+    "del": "^7.1.0",
+    "esbuild": "^0.19.11",
+    "eslint": "^8.56.0",
     "events": "^3.3.0",
     "fancy-log": "^2.0.0",
     "file-loader": "^6.2.0",
     "fs": "0.0.1-security",
-    "fuse-box": "^4.0.1-next.8",
     "gulp": "^4.0.2",
-    "gulp-bootlint": "^1.1.1",
     "gulp-copy": "^4.0.1",
     "gulp-csslint": "^1.0.1",
     "gulp-env": "^0.4.0",
@@ -117,58 +117,58 @@
     "gulp-typescript": "^6.0.0-alpha.1",
     "gulp-uglify": "^3.0.2",
     "gulp-uglify-es": "^3.0.0",
-    "html-webpack-plugin": "^5.5.0",
-    "jasmine-core": "^4.1.0",
+    "html-webpack-plugin": "^5.6.0",
+    "jasmine-core": "^5.1.1",
     "jasmine-jquery": "^2.1.1",
     "jasmine-promise-wrapper": "0.0.3",
-    "karma": "^6.3.18",
-    "karma-chrome-launcher": "^3.1.1",
+    "jsoneditor": "^10.0.0",
+    "karma": "^6.4.2",
+    "karma-chrome-launcher": "^3.2.0",
     "karma-commonjs": "^1.0.0",
     "karma-firefox-launcher": "^2.1.2",
-    "karma-jasmine": "^4.0.2",
+    "karma-jasmine": "^5.1.0",
     "karma-mocha-reporter": "^2.2.5",
     "karma-opera-launcher": "^1.0.0",
     "karma-steal-npm": "^0.1.5",
     "karma-story-reporter": "^0.3.1",
-    "karma-typescript": "^5.5.3",
-    "karma-typescript-angular2-transform": "^5.5.3",
+    "karma-typescript": "^5.5.4",
+    "karma-typescript-angular2-transform": "^5.5.4",
     "karma-typescript-preprocessor": "^0.4.0",
-    "mini-css-extract-plugin": "2.5.3",
-    "node-sass": "^7.0.1",
-    "parcel": "^2.4.1",
+    "mini-css-extract-plugin": "^2.7.7",
+    "node-sass": "^9.0.0",
+    "parcel": "^2.11.0",
     "parcel-transformer-strip": "file:parcel/appl/js/parcel-transformer-strip",
-    "postcss-import": "^14.1.0",
-    "postcss-loader": "^6.2.1",
+    "postcss-import": "^16.0.0",
+    "postcss-loader": "^8.0.0",
     "postcss-url": "^10.1.3",
     "raw-loader": "^4.0.2",
     "resolve-url-loader": "^5.0.0",
-    "rollup": "^2.70.2",
+    "rollup": "^4.9.5",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-progress": "^1.1.2",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-serve": "^1.1.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rxjs": "^7.5.5",
-    "sass-loader": "^12.6.0",
-    "terser-webpack-plugin": "^5.3.1",
-    "tslib": "^2.3.1",
-    "typescript": "4.6.3",
-    "uglify-es": "^3.3.9",
-    "uglify-js": "^3.15.4",
+    "rollup-plugin-serve": "^1.1.1",
+    "rxjs": "^7.8.1",
+    "sass-loader": "^14.0.0",
+    "terser-webpack-plugin": "^5.3.10",
+    "tslib": "^2.6.2",
+    "typescript": "~5.2.2",
+    "uglify-js": "^3.17.4",
     "url-loader": "^4.1.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^4.0.0",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1",
-    "webpack-merge": "^5.8.0",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.10.0",
     "webpack-stream": "^7.0.0",
     "webpack-strip-block": "^0.3.0",
-    "zone.js": "^0.11.5"
+    "zone.js": "^0.14.3"
   },
   "alias": {
-    "pager": "./node_modules/tablesorter/dist/js/extras/jquery.tablesorter.pager.min.js"
+    "pager": "./node_modules/tablesorter/dist/js/extras/jquery.tablesorter.pager.min.js",
+    "@angular/common/http": "./node_modules/@angular/common/fesm2022/http.mjs",
+    "@angular/core/primitives/signals": "./node_modules/@angular/core/fesm2022/primitives/signals.mjs"
   }
 }
